[gd_scene load_steps=8 format=3 uid="uid://cmt35ikos033c"]

[ext_resource type="Script" uid="uid://dbp8ld5egia1r" path="res://Scripts/menu.gd" id="1_2uedd"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_cmf4a"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ctybb"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_32f2h"]
bg_color = Color(0.878796, 1.68458e-05, 0.594203, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_30kml"]
bg_color = Color(0.401657, 0.69173, 1.34766e-06, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_kmc7q"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_1okoa"]

[node name="Menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_2uedd")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 0
offset_left = -21.0
offset_top = -27.0
offset_right = 1303.0
offset_bottom = 747.0
color = Color(1, 0, 0, 1)

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -87.0
offset_top = 75.0
offset_right = 88.0
offset_bottom = 183.0
grow_horizontal = 2
grow_vertical = 2

[node name="Button" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 70
theme_override_styles/focus = SubResource("StyleBoxEmpty_cmf4a")
theme_override_styles/hover_mirrored = SubResource("StyleBoxFlat_ctybb")
theme_override_styles/hover = SubResource("StyleBoxFlat_32f2h")
theme_override_styles/pressed = SubResource("StyleBoxFlat_30kml")
theme_override_styles/normal = SubResource("StyleBoxFlat_kmc7q")
text = "Jugar"

[node name="Button2" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 70
theme_override_styles/focus = SubResource("StyleBoxEmpty_1okoa")
text = "Quitar"

[node name="VBoxContainer2" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 13
anchor_left = 0.5
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = 869.0
offset_top = 118.0
offset_right = 1121.0
offset_bottom = 118.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(3.0796, 2.37412)

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer2"]
layout_mode = 2

[node name="Nivel1" type="Button" parent="VBoxContainer2/HBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 68
text = "1             
"
icon_alignment = 1
expand_icon = true

[node name="Nivel2" type="Button" parent="VBoxContainer2/HBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 68
text = "2
"
icon_alignment = 1
expand_icon = true

[node name="Nivel3" type="Button" parent="VBoxContainer2/HBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 68
text = "3"
icon_alignment = 1
expand_icon = true

[node name="Nivel4" type="Button" parent="VBoxContainer2/HBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 68
text = "4"
icon_alignment = 1
expand_icon = true

[node name="Nivel5" type="Button" parent="VBoxContainer2/HBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 68
text = "5"
icon_alignment = 1
expand_icon = true

[node name="HBoxContainer2" type="HBoxContainer" parent="VBoxContainer2"]
layout_mode = 2

[node name="Nivel6" type="Button" parent="VBoxContainer2/HBoxContainer2"]
layout_mode = 2
theme_override_font_sizes/font_size = 68
text = "6
"
icon_alignment = 1
expand_icon = true

[node name="Nivel7" type="Button" parent="VBoxContainer2/HBoxContainer2"]
layout_mode = 2
theme_override_font_sizes/font_size = 68
text = "7
"
icon_alignment = 1
expand_icon = true

[node name="Nivel8" type="Button" parent="VBoxContainer2/HBoxContainer2"]
layout_mode = 2
theme_override_font_sizes/font_size = 68
text = "8
"
icon_alignment = 1
expand_icon = true

[node name="Nivel9" type="Button" parent="VBoxContainer2/HBoxContainer2"]
layout_mode = 2
theme_override_font_sizes/font_size = 68
text = "9
"
icon_alignment = 1
expand_icon = true

[node name="Nivel10" type="Button" parent="VBoxContainer2/HBoxContainer2"]
layout_mode = 2
theme_override_font_sizes/font_size = 35
text = "10
"
icon_alignment = 1
expand_icon = true

[connection signal="button_down" from="VBoxContainer/Button" to="." method="_on_button_button_down"]
[connection signal="button_down" from="VBoxContainer/Button2" to="." method="_on_button_2_button_down"]
[connection signal="button_down" from="VBoxContainer2/HBoxContainer/Nivel1" to="." method="_on_nivel_1_button_down"]
